--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/holo_red_light</color>
-    <color name="colorPrimaryDark">@android:color/holo_red_light</color>
+    <color name="colorPrimary">@android:color/primary_text_light_nodisable</color>
+    <color name="colorPrimaryDark">@color/design_default_color_on_secondary</color>
     <color name="colorAccent">@android:color/holo_orange_dark</color>
 </resources>
