--- a/app/src/main/res/drawable/bg_white.xml
+++ b/app/src/main/res/drawable/bg_white.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-     android:color="#79A54F5F">
-<item>
-        <shape android:shape="rectangle"
-                >
-                <solid android:color="@color/cardview_dark_background"
-                    />
-                <corners android:radius="0dp"/>
-        </shape>
-
-</item>
-
-
+     android:color="?android:attr/colorControlHighlight">
+        <item  >
+                <shape android:shape="rectangle">
+                        <solid android:color="#9A9090" />
+                        <corners android:radius="10dp" />
+                </shape>
+        </item>
 
 </ripple>
