--- a/app/src/main/res/layout/item_pic.xml
+++ b/app/src/main/res/layout/item_pic.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
-
-    android:layout_margin="10dp"
+    app:cardCornerRadius="5dp"
+     android:layout_margin="10dp"
     android:orientation="vertical"
-
-    >
-
-
-    <androidx.cardview.widget.CardView
+     >
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_white"
         >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-
-            >
-
-            <ImageView
-                android:id="@+id/pic_holder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="Image"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-    <TextView
-        android:id="@+id/pic_text"
+        <ImageView
+        android:id="@+id/pic_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="Image"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher"
 
-        android:textColor="@color/cardview_dark_background"
-        android:text="@string/app_name" />
+        />
+
+    </RelativeLayout>
+
+
+
+
+
+
     <!--    <CheckBox-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="wrap_content"-->
     <!--        android:text="Save"-->
     <!--        />-->
 
+<!--    <TextView-->
+<!--        android:id="@+id/pic_text"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="2dp"-->
+<!--        android:textAlignment="textEnd"-->
+<!--        android:textColor="@color/ic_launcher1_background"-->
+<!--        android:shadowColor="@color/colorPrimaryDark"-->
+<!--        android:shadowDx="1"-->
+<!--        android:shadowDy="1"-->
+<!--        android:shadowRadius="5"-->
+<!--        android:text="@string/app_name" />-->
+<!--    -->
 
-</LinearLayout>
+
+</androidx.cardview.widget.CardView>
