Search crash Bug fixed

--- a/app/src/main/res/layout/activity_image_preview.xml
+++ b/app/src/main/res/layout/activity_image_preview.xml
@@ -15,7 +15,9 @@
         android:id="@+id/image_prev"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+
+        />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
